--- a/catznip/docs/release_notes/r10.md
+++ b/catznip/docs/release_notes/r10.md
@@ -1,7 +1,5 @@
 # Catznip R10
 
-<sup>(Imported from MediaWiki - layout may be broken)</sup>
-
 ![Catznip_R10](./r10/Catznip_R10.png)
 
 Catznip R10 is a long overdue update that brings the viewer right up to date with all the latest from Linden Lab and fixes several issues from R9.
@@ -13,6 +11,7 @@ At this time we only have a Windows release, Linux will follow shortly.
 Due to a lack of time and suitable hardware we are unable to build, test and debug an OS X version to the standard our users would expect from Catznip. At this point it seems unlikely that there will be future OS X versions of the viewer. Thanks to those who have offered remote access or to build the viewer on our behalf.
 
 ## R9 Fixes
+
 * fixed : "Teleport" and "Show on Map" on the parcel information floater don't work until after the parcel information has loaded
 * fixed : can't copy/paste a folder containing links
 * fixed : "Unknown" is shown on the login screen when no credentials are present
@@ -29,25 +28,28 @@ Due to a lack of time and suitable hardware we are unable to build, test and deb
 * fixed : CATZ-210: Location input control's context menu is missing
 
 ## Viewer Fixes
+
 * fixed : Closing 100+ notifications locks up the viewer
 * fixed : Can't use "Ctrl-X" to cut an inventory selection consisting of a single worn item (context menu works fine)
 * fixed : Toggling between condensed and expanded views of notifications isn't visibly smooth or attractive
 * fixed : User-installed custom dictionaries no longer work
 
 ## Changes
+
 * changed: Don't use the "first login on this install" login screen
 * changed: Allow dragging of outfit folders into user (FT_NONE) folders within the My Outfits folder
 
 ## New features
+
 * added : Notification filtering (by type and/or text) to the notification well floater
 * added : (Re)added support for "Separate (Chat) Windows"
-	* not currently accesible through UI - use the debug setting (IMUseSeparateFloater) to control the separate windows vs tabbed container functionality
+  * not currently accessible through UI - use the debug setting (IMUseSeparateFloater) to control the separate windows vs tabbed container functionality
 * added : 'EnableGrabNonPhysical' setting to control grabbing of non-physical objects (off by default)
-	* fixes the problem of accidentally hitting an object while holding down Ctrl/Ctrl-Shift
+  * fixes the problem of accidentally hitting an object while holding down Ctrl/Ctrl-Shift
 * added : "Ear at speaker position" option for voice chat
 * added : teleport fade in/out transitions
 * added : Show an old "Live Help"-style message when the user opens the support/beta group(s)
-* added : "Show Debug Setting" SLapp command for support (syntax: secondlife:///app/setting/<setting>[/show])
+* added : "Show Debug Setting" SLapp command for support (syntax: secondlife:///app/setting/&lt;setting&gt;[/show])
 * added : feedback floater to allow users to submit viewer feedback easily
 * added : Clicking a group notice in the notifications floater will now toggle between the expanded and condensed views
 * added : CATZ-164: Added "Show Web Browser" menu item to the bottom Advanced menu (homepage is customizable through the * added : 'BrowserHomePage' debug setting)
@@ -55,6 +57,7 @@ Due to a lack of time and suitable hardware we are unable to build, test and deb
 * added : CATZ-211: "Paste and teleport" functionality for the input location control
 
 ## RLVa Updates and Fixes
+
 * added : Better handling of temporary attachments when checking attachment locks
 * fixed : Reimplemented the @adjustheight command using LL's new hover functionality
-* changed: More user-friendly and intuitive enable/disable toggling behaviour
+* changed: More user-friendly and intuitive enable/disable toggling behavior
