--- a/catznip/docs/release_notes/r11.md
+++ b/catznip/docs/release_notes/r11.md
@@ -1,7 +1,5 @@
 # Catznip R11
 
-<sup>(Imported from MediaWiki - layout may be broken)</sup>
-
 ![Catznip_R11](./r11/Catznip_R11.png)
 
 This release brings Catznip right up-to date with new LL features including Bento (new avatar bones), Jelly Dolls, Graphics presets, HTTP co-routines, LibVLC, OpenJPEG, voice improvements and a lot of bug fixes. We also have a new 'Quick preferences' floater providing access to local rendering, avatar complexity, wearing and windlight options. RLVa has seen more incremental updates and can now be enabled without needing to restart the client.
@@ -9,6 +7,7 @@ This release brings Catznip right up-to date with new LL features including Bent
 Important note : Linden Lab's Bento project (new avatar bones) is not backwards compatible with previous viewers and as such all previous versions will be blocked in the near future. Please update to R11 at your earliest convenience and get in touch to resolve any issues.
 
 ## New
+
 * Quick Preferences panel - auto-added to everyone's bottom toolbar; please test and give feedback
 * Quick Appearance - several options to deal with avatar complexity in a (hopefully) more intuitive and easy way
 * Quick Wearing - fast access to worn items + list of complexity cost per item (WIP - context menu not complete yet)
@@ -20,6 +19,7 @@ Important note : Linden Lab's Bento project (new avatar bones) is not backwards 
 * CATZ-225: Split long chat/IM messages into multiple chunks
 
 ## Fixed
+
 * [FIXED] CATZ-163: Changing Windows Audio Output Device requires a relog to work
 * [FIXED] CATZ-207: Feedback floater doesn't close after submitting feedback
 * [FIXED] CATZ-244: Edit Hover button doesn't work
@@ -46,15 +46,17 @@ Important note : Linden Lab's Bento project (new avatar bones) is not backwards 
 * [FIXED] CATZ-262: Unread IM feature (re)opens an IM session with no visible history when logging in
 
 ## New (RLVa)
+
 * RLVa can now be toggled on/off at the login screen without requiring a viewer restart
 * Added the @list and @stopim IM queries (+ little easter egg *hint*)
-* @sit[:<null-uuid>]=force will ground-sit the avatar (if permitted)
+* @sit[:&lt;null-uuid&gt;]=force will ground-sit the avatar (if permitted)
 
 ## Fixed (RLVa)
+
 * [FIXED] 2 bugs relating to evading folder locks
 * [FIXED] Path separator ('/') cannot be used in shared folder names and shouldn't be returned by @getinv and @findfolder(s)
 * [FIXED] Force wear commands don't work from the console
-* [FIXED] @setgroup:<string>=force will now do a "starts with" rather than an exact match
+* [FIXED] @setgroup:&lt;string&gt;=force will now do a "starts with" rather than an exact match
 * [FIXED] Edge case issues with @fartouch and other touch related restrictions
 * [FIXED] Can't select a face on a nearby object when both @fartouch and @touch* restricted
 * [FIXED] Object inspectors aren't shown on nearby objects when both @fartouch and @touch* restricted
