--- a/catznip/docs/release_notes/r12_1.md
+++ b/catznip/docs/release_notes/r12_1.md
@@ -3,6 +3,7 @@
 ![Catznip_R12_1](./r12_1/Catznip_R12_1.jpg)
 
 ## Optimizations
+
 A lot of work went into optimizing this Catznip release: neither Coffea or I have recent hardware which makes it important that additions don’t negatively impact our own overall experience (FPS, etc). The same is true for features added by Linden Lab. Animesh in particular had a very negative impact on performance which we have largely negated with some extra work (including a fix from Beq for rendering rigged attachments with shadows enabled).
 
 Actual performance improvements often depend on your specific computer: all being well, performance should be at least that of R12. If your computer is CPU bound and has GPU to spare then you should see an improvement. If you don’t currently have shadows enabled because it was a little too slow to have enabled all the time, try enabling them with the new release, for some the change is enough to allow “shadows by default”.
@@ -10,6 +11,7 @@ Actual performance improvements often depend on your specific computer: all bein
 Given the wide variety of hardware and settings out there, we would really appreciate to hear your feedback. Especially if it’s worse; or worse under specific circumstances; and of course if you noticed an improvement we’d love to hear from you as well.
 
 ## Render Others As
+
 One popular suggestion was to add an option to only render friends in order to improve frame rate for busy (shopping/music) events.
 
 In Catznip tradition I ran with the suggestion and gave it a Catznip twist so now we have an extra “Render” option on the quick preferences panel.
@@ -81,6 +83,7 @@ We’d really love your opinion on the new login screen as well: the good >and< 
 ## Minor Features
 
 ### Texture previews
+
 * CATZ-456 - Show a texture tooltip for inventory floaters that only contain a single texture
 * [FIXED] CATZ-457 - Texture previews and inspectors load slowly
 
@@ -95,6 +98,7 @@ Additionally, when hovering over a folder that contains a single texture you’l
 ![TextureFolderTooltip](./r12_1/TextureFolderTooltip.png)
 
 ### Chat
+
 * CATZ-386 - Allow the user to control how much vertical screen space is taken up by nearby chat toasts
 * CATZ-436 - Add preference options to control how long nearby chat toasts stay visible
 * [FIXED] CATZ-435 - The collapsed nearby chat floater drifts down every time its visibility is toggled
@@ -109,6 +113,7 @@ For those that wonder: the width of nearby chat toasts is actually derived from 
 (There’s a debug setting to set them to a fixed width but I wouldn’t actually recommend doing that).
 
 ### Show in Inventory
+
 * [FIXED] CATZ-309 - 'Show in Inventory' check on inventory offers doesn't open inventory
 * [FIXED] CATZ-317 - "Show in Inventory" checkbox doesn't seem to work on the buy/pay floater
 * [FIXED] CATZ-453 - Clicking 'Show' on an notecard offer doesn't open the preview floater
@@ -123,6 +128,7 @@ Catznip added the “Show in inventory” options to inventory offers and purcha
 Inventory offers for an item that can be previewed (notecards/landmarks/textures) now offer to show the object rather than its location in inventory.
 
 ### Building
+
 * CATZ-384 - Add select prev/next link buttons to the build floater
 * CATZ-413 - Allow texture repeats larger than 100
 
@@ -131,6 +137,7 @@ When ‘Edit Linked’ is checked, you can use the next and previous buttons to 
 ![LinkPrevNext](./r12_1/LinkPrevNext.png)
 
 ### Avatar Fix menu
+
 * CATZ-430 - Group avatar troubleshooting options together in a sub-menu for both self & others
 * CATZ-431 - Option to restart (a.k.a. sync) an avatar's animations (or the animations of all avatars)
 
@@ -153,6 +160,7 @@ A global “Sync Animations” option has been added under the Advanced menu, th
 ![FixAvatarSyncAnims](./r12_1/FixAvatarSyncAnims.png)
 
 ### Appearance
+
 * CATZ-481 - Show current/unsaved changes on the wearable edit panel
 
 While editing your shape (or any wearable such as alpha, physics, shirt, etc…) any change you make will be shown in bold with an asterisk behind the name. In addition, the category that parameter belongs to will show in bold with an asterisk as well.
@@ -162,10 +170,12 @@ Dragging a slider back to its previous value will switch it back to an unchanged
 ![WearableEdit](./r12_1/WearableEdit.png)
 
 ### Windlight Quick-Prefs
+
 * CATZ-414 - Add 'Reset Windlight' to the Troubleshooting tab
 * CATZ-459 - Minor improvements to the WindLight quick preferences panel
 
 The Windlight quick preferences panel got a few minor changes:
+
 * There’s now a slider for both ‘Scene Gamma’ and ‘East Angle’
 * “Day Cycle”, “Fixed Sky” and “Water” have a third button that directly opens the edit floater
 * A “Reset Windlight” button to go back to the default (the same button is also present on the Troubleshooting preferences tab)
@@ -173,6 +183,7 @@ The Windlight quick preferences panel got a few minor changes:
 ![QuickPrefsWindLight](./r12_1/QuickPrefsWindLight.png)
 
 ### Wearing appearance panel
+
 * CATZ-343 - Show the total/remaining attachment count on the Wearing panel
 * CATZ-427 - Touch/Edit context menu options on the Wearing panel are missing for temporary attachments
 * [FIXED] CATZ-421 - Can't detach a temporary attachment from the Appearance / Wearing / Temporary Attachment accordion
@@ -182,6 +193,7 @@ The appearance wearing panel had a number of small bug fixes (see above) as well
 ![AppearanceWearing](./r12_1/AppearanceWearing.png)
 
 ### Drag & Drop
+
 * CATZ-411 - Drag & drop texture upload broken
 * CATZ-415 - Show the image upload preview when drag-and-drop uploading a texture
 * CATZ-416 - Enable drag-and-drop uploading of animations, sounds and mesh models
@@ -208,7 +220,7 @@ This is a list of all the other bugfixes included in this release :
 * CATZ-419 - Chat following a teleport/friends offer isn't (always) visible in the IM conversation
 * CATZ-423 - Sculpt maps aren't being refreshed when using "Texture Refresh"
 * CATZ-425 - Unable to derender items on a banned parcel
-* CATZ-429 - "Sit Down" option on the avatar self menu dissapears when flying
+* CATZ-429 - "Sit Down" option on the avatar self menu disappears when flying
 * CATZ-433 - 'Display name' label truncated on the profile floater
 * CATZ-437 - Changing outfits doesn't update the "worn" suffix on the outfit folder in inventory
 * CATZ-438 - Hitting ENTER on the login name field should start log-in
@@ -222,8 +234,10 @@ This is a list of all the other bugfixes included in this release :
 * Various text/label overlap/cut-off issues on the Quick Preferences panels
 
 ## Crash fixes
+
 * CRASH-23 - Crash in writeToRecorders() on log out
-* CRASH-24 - LLImageGL::createGLTexture() [LLError]
+* CRASH-24 - LLImageGL::createGLTexture() LLError
 
 ## RLVa v2.2
-Please read [[RLVa_2.2_Release_Notes]] for the detailed RLVa release notes.
+
+Please read RLVa_2.2_Release_Notes for the detailed RLVa release notes.
