--- a/catznip/docs/release_notes/r12_3.md
+++ b/catznip/docs/release_notes/r12_3.md
@@ -6,12 +6,13 @@ No Kitty magic in this one, but it does bring you 'Bakes on Mesh' and is up to d
 
 ## Bakes on Mesh (BoM)
 
-* Linden Lab's Knowledge Base article: https://community.secondlife.com/knowledgebase/english/bakes-on-mesh-r1512/
-* Inara's article: https://modemworld.me/2019/08/27/bakes-on-mesh-a-basic-primer/
+* Linden Lab's Knowledge Base article: <https://community.secondlife.com/knowledgebase/english/bakes-on-mesh-r1512/>
+* Inara's article: <https://modemworld.me/2019/08/27/bakes-on-mesh-a-basic-primer/>
 
 (Note that even if you don't plan on using BoM you still need a BoM-enabled viewer to see others correctly)
 
 ## Bugfixes
+
 * Minor installer issues
 * Revert SL-1579 and allow taking rezzed items if their originaitng folder was 'Receved Items'
 * Crash in busy/crowded places while camming around (thank you Nicky from Firestorm)
@@ -23,4 +24,5 @@ No Kitty magic in this one, but it does bring you 'Bakes on Mesh' and is up to d
 * RLVa - BoM universal layer is missing from @getoufit
 
 ## Linden Lab viewer changes
-LL Release Notes: https://releasenotes.secondlife.com/viewer/6.3.1.530559.html
+
+LL Release Notes: <https://releasenotes.secondlife.com/viewer/6.3.1.530559.html>
