--- a/catznip/docs/release_notes/r13.md
+++ b/catznip/docs/release_notes/r13.md
@@ -1,10 +1,10 @@
 # Catznip R13
 
 <video class="video-item" autoplay="" loop="" muted="">
-	<source src="Catznip-R13.mp4" type="video/mp4">
-	Your browser does not support the video tag.
+    <source src="Catznip-R13.mp4" type="video/mp4">
+    Your browser does not support the video tag.
 </video>
-		
+
 It's definitely been a very long road to get to this point but we've finally broken the curse and R13 is here in time for the new year!
 
 If you're reading this you'll notice we have a brand new release notes page and we've been working behind the scenes for many other improvements to streamline releases.
@@ -22,16 +22,17 @@ The beta feedback has been largely positive but new Mac users should expect some
 We already know we have the **best** installer out of all Second Life viewers, obviously...
 
 ## Camera presets
+
 The viewer has had the ability to let you change between 3 fixed camera presets for a while now; or even to set a custom camera viewpoint for those who wanted to delve into the debug settings. With the camera presets feature Linden Lab made it all a lot more accessible to everyone, even if it did come with quite horrible UI (it doubled in width – see below).
 
 From experience we know that people prefer a very minimal camera floater, so I did my best to keep things as tight as possible while still making the new feature easily accessible to everyone.
 
 ![CameraFloaterLLvsCatznip](./r13/CameraFloaterLLvsCatznip.png)
 
-
-You can read more about the feature and how to use it in Inara’s tutorial @ https://modemworld.me/2020/05/19/tutorial-viewer-camera-presets/ . Do keep in mind she is referencing the official viewer’s user interface, but everything should be clear enough to find your way around in Catznip if you keep on reading below 😊.
+You can read more about the feature and how to use it in Inara’s tutorial @ <https://modemworld.me/2020/05/19/tutorial-viewer-camera-presets/> . Do keep in mind she is referencing the official viewer’s user interface, but everything should be clear enough to find your way around in Catznip if you keep on reading below 😊.
 
 In integrating the feature we also came up with a few innovations of our own. For instance, you might have noticed there are now two sliders in between the orbit and pan controls:
+
 * The left slider controls the camera zoom as it previously did (=using the scroll wheel on your mouse). When focused on an object we’ve also slightly tweaked the slider values so you’ll have more control when the camera is closer to the object rather than instantly fly off into the distance.
 * The right slider controls the field of view (= Ctrl-8 / Ctrl-0) which is more commonly used to ‘zoom’ in tight to an attachment for editing.
 
@@ -41,8 +42,7 @@ The dropdown lets you choose from your available presets and we have included th
 
 ![CameraPresets](./r13/CameraPresets.png)
 
-
-On the left side you will see all presets. Clicking one will show you its detailed values on the right. The ‘Refresh’ icon will only show on presets that are included in the viewer by default and allow you reset them back in case you’ve made changes to them that you’re not at all happy with. 
+On the left side you will see all presets. Clicking one will show you its detailed values on the right. The ‘Refresh’ icon will only show on presets that are included in the viewer by default and allow you reset them back in case you’ve made changes to them that you’re not at all happy with.
 
 To create a new preset, simply click the New button at the bottom right. To save your changes click Save; or click the down arrow to save your current values as an entirely new (custom) preset.
 
@@ -51,8 +51,7 @@ You can immediately jump into changing the values; however you also have the opt
 To delete one of your own custom presets, hover over it on the left side and click the trash icon that appears.
 ![CameraPresetsDelete](./r13/CameraPresetsDelete.png)
 
- 
-Finally: remember that Catznip has a transparency slider specifically for the Camera and Move floaters at the Me menu / Preferences / Colors tab. If you are one of the people who always keeps (one of) those floaters on screen, setting a low opacity will leave it accessible but not obscure part of the world.
+ Finally: remember that Catznip has a transparency slider specifically for the Camera and Move floaters at the Me menu / Preferences / Colors tab. If you are one of the people who always keeps (one of) those floaters on screen, setting a low opacity will leave it accessible but not obscure part of the world.
 
 ![CameraFloaterTransparency](./r13/CameraFloaterTransparency.png)
 
@@ -81,22 +80,26 @@ Since Windlight settings can now be present in your own inventory as well as the
 ![QuickPrefsWindlightDropdown](./r13/QuickPrefsWindlightDropdown.png)
 
 ### Active (Windlight) setting indicator
+
 When a Windlight (day/sky/water) setting is currently active you'll now see an 'active' indicator behind it in My Environments and the inventory floater.
 
 ![InventoryWindlightActive](./r13/InventoryWindlightActive.png)
 
 ### Edit library assets
+
 Normally, if you want to make small changes to a stock/library Windlight setting you'd first have to copy that item into your own inventory and then open it to make edits.
 This quality of life improvement allows you to open Windlight settings straight from the library (right-click inventory / Open) and then make your changes.
 When it's time to save, click the 'Save As' button which will save the new environment in your 'Settings' folder.
 (Remember that you can also pick 'Apply Only To Myself' to make temporary one-time changes without needing to clutter your inventory with unnecessary settings items).
 
 ### Floater cleanup
+
 Most of the Windlight floaters were cleaned up to make them take up less of your screen without feeling too cramped.
 
 ## Improvements
 
 ### Beacons
+
 I have added an option to control the height of the beacons which is particularly useful if you are trying to find the one scripted object in a sea of red lines that stretch to infinity.
 
 Using a height value of 4 for instance will give you a lot more spatial detail on where each beacon is located and marks tracking down an object so much easier.
@@ -106,11 +109,13 @@ I have also added an option specifically to highlight light sources which can be
 ![BuildBeacons](./r13/BuildBeacons.png)
 
 ### Group notice
+
 * CATZ-530 - Show 'remaining characters' on the group notice floater
 
 ![GroupNewNotice](./r13/GroupNewNotice.png)
 
 ### Places search
+
 * Pressing ⏎ [enter] on the text editor will run the search
 * Pressing ⬇ [down] afterwards will jump to the first result (where you can then use the arrow keys to navigate between them)
 * Pressing ⏎ [enter] on a search result will teleport you to that location
@@ -120,6 +125,7 @@ I have also added an option specifically to highlight light sources which can be
 ![SearchPlaces](./r13/SearchPlaces.png)
 
 ### Resolution scale
+
 If you're really struggling with your FPS then you can give the new resolution scale slider a try (it's under Me / Preferences / Graphics / Advanced).
 At 100% (all the way to the right) everything looks at normal; at 50% (all the way to the left) the viewer will render at half the normal resolution leaving you with a blockier view but hopefully a more manageable FPS (or allow you to enable Windlight / ALM where you otherwise couldn't).
 Play around with the setting - we've found there's definitely a sweet spot but it's different for each specific computer configuration.
@@ -127,6 +133,7 @@ Play around with the setting - we've found there's definitely a sweet spot but i
 ![GraphicsResolutionScale](./r13/GraphicsResolutionScale.png)
 
 ### Minor improvements
+
 * CATZ-547 - Option to turn off extra lighting that is applied when editing appearance
 * CATZ-557 - Improve initial opening time for the landmarks floater (+ improved filtering performance)
 * CATZ-584 - Give visual feedback when using an invalid regex for an inventory search
@@ -145,14 +152,13 @@ Play around with the setting - we've found there's definitely a sweet spot but i
 * CATZ-222 - Restoring a derendered object does not immediately make it visible again (it required a teleport away and back)
 * CATZ-274 - Unchecking 'Turn Towards Selection' still turns the avatar towards a selected object
 * CATZ-321 - Toggling "Arm Points Towards Selection" does update your avatar if you currently have an object selected
-    * Reminder: you can toggle this and ‘Turn Towards Selection’ from the Build / Options submenu
-<br />(or by clicking the arrow next to ‘Selection Options’ when the builder floater is open)
-* CATZ-353 - Script colour changes aren't applied to existing script floaters
+  * Reminder: you can toggle this and ‘Turn Towards Selection’ from the Build / Options submenu (or by clicking the arrow next to ‘Selection Options’ when the builder floater is open).
+* CATZ-353 - Script color changes aren't applied to existing script floaters
 * CATZ-521 - 'Hide All Controls' should hide the chiclet bar
 * CATZ-528 - Help / About - Release Notes link does not work
 * CATZ-543 - Object name is only partially visible on the 'Pay' floater
 * CATZ-549 - Can't reposition some HUDs using the edit floater (manual entry or using the X/Y/Z spinners)
-    * For instance the Maitreya HUD needs negative values to move it closer to the top left of the screen
+  * For instance the Maitreya HUD needs negative values to move it closer to the top left of the screen
 * CATZ-578 - Worn items are moved into Lost-and-Found at log off for some users
 * CATZ-580 - Delete button overhang on the picks floats
 * CATZ-591 - 'Browse' button on the Preferences Snapshots tab is in the wrong position
@@ -162,9 +168,10 @@ Play around with the setting - we've found there's definitely a sweet spot but i
 * CATZ-599 - Viewer doesn't auto-login to web profiles, search and marketplace in internal browser
 * CATZ-603 - Maximum texture memory on cards with &lt;1.5Gb of texture memory is lower than 512Mb
 * CATZ-610 - Text overlaps in Preferences / Move & View
-* Removing a stored user credential does not clear their stored favourites
+* Removing a stored user credential does not clear their stored favorites
 
 ## Crash fixes
+
 * CATZ-584 - Crash when using regex inventory search
 * CRASH-34 - LLTextureCache::writeToFastCache(...)
 * CRASH-35 - LLMeshCostData::init()
