--- a/catznip/docs/release_notes/r05.md
+++ b/catznip/docs/release_notes/r05.md
@@ -1,7 +1,5 @@
 # Catznip R5
 
-<sup>(Imported from MediaWiki - layout may be broken)</sup>
-
 ![Catznip_R5](./r05/Catznip_R5.jpg)
 
 Catznip R5 is a little overdue and initially started out as a maintenance release, but you know how these things go, poke this , poke that, add something here, ranting screaming fit there …
@@ -21,18 +19,22 @@ RLVa got a well needed service with a number of FUI and location based bugs gett
 Fans of a more classic interface and anyone with limited screen real estate will love the new Mini Location Bar and ability to remove the Buy L$ and Marketplace buttons. Just right click the top status bar.
 
 ## Highlights
+
 * Script Recovery : Never loose a script you were working on because the viewer crashed or you got logged out. works with all scripts, everywhere. Open scripts are auto-saved locally every 60 seconds. In event of viewer crash, scripts are presented to the user and optionally recovered to lost & found folder.
 * Chat Enhancements : A big push with some our chat overhaul features.
 * Eject from Group : Option on the group participant context menu to eject someone from a group, remove unwanted members without needing to open the group floater and search.
 * Inline Spell Checker : As part of the work required for submitting the Catznip Spell Checker to Linden Lab for inclusion in the official client it has been rewritten from scratch. On the way a LOT of refinements and bug fixes.
 
 ## Script Recovery
+
 Never loose a script you were working on because the viewer crashed or you got logged out. works with all scripts, everywhere.
+
 * added :  Open scripts are auto-saved locally every 60 seconds. In event of viewer crash, scripts are presented to the user and optionally recovered to lost & found folder.
-	* backup copy is only saved when the editor isn’t pristine
-	* backup copy is removed when the asset was successfully uploaded, or when the floater is closed
+  * backup copy is only saved when the editor isn’t pristine
+  * backup copy is removed when the asset was successfully uploaded, or when the floater is closed
 
 ## Chat Enhancements
+
 A big push with some our chat overhaul features.
 
 * added : allow resizing of the multi-line nearby chat bar (hover the mouse between the chat history and chat bar)
@@ -45,16 +47,19 @@ A big push with some our chat overhaul features.
 * fixed : “Nearby Chat” tab in the conversations floater isn’t removed when toggling ‘NearbyChatFloaterBarType’ or ‘NearbyChatFloaterWindow’
 
 ## Status Bar
-Cleaned up and tightened top status bar, especially useful if you prefer a minimalistic UI or just run the viewer with limited screen real estate (like on Kitty’s fancy ION netbook. Funny .. I’ve had a netbook 2 years now, but the moment Kitty gets one it’s suddenly important .. mutter mutter mumble).
+
+Cleaned up and tightened top status bar, especially useful if you prefer a minimalist UI or just run the viewer with limited screen real estate (like on Kitty’s fancy ION netbook. Funny .. I’ve had a netbook 2 years now, but the moment Kitty gets one it’s suddenly important .. mutter mutter mumble).
+
 * added : “Show Buy Currency Button” and “Show Marketplace Button” context menu items to selectively show/hide those buttons on the status bar
 * changed : mini-location bar dynamically resizes when the menu bar or status bar sizes change
 * changed : rearranged the mini-location bar
-	* removed the info button
-	* show the maturity rating as an icon rather than part of the parcel text
-	* reformat the parcel text to “Region (Coordinates) – Parcel”
-	* coordinates and properties are always visible, regardless of navigation bar options
+  * removed the info button
+  * show the maturity rating as an icon rather than part of the parcel text
+  * reformat the parcel text to “Region (Coordinates) – Parcel”
+  * coordinates and properties are always visible, regardless of navigation bar options
 
 ## Spell Checker
+
 * added : ‘Second Life glossary’ dictionary (enabled by default)
 * fixed : overwriting existing text won’t trigger a new spell check
 * fixed : opening an existing modifiable notecard doesn’t always show existing misspellings
@@ -62,6 +67,7 @@ Cleaned up and tightened top status bar, especially useful if you prefer a minim
 * fixed : squiggly lines aren’t centered on the misspelled word (fixed for LLTextEditor)
 
 ## Misc
+
 * added : “Eject from Group” option on the group participant context menu
 * added : drag-moving of the current selection in a text editor control
 * added : (select) notifications can be (optionally) logged to chat and/or instant message
@@ -73,7 +79,7 @@ Cleaned up and tightened top status bar, especially useful if you prefer a minim
 * changed : removed “Empty Lost & Found” from the inventory context menu and the inventory gear menu
 * changed : reorganized the General preferences tab
 * fixed : shift-selecting text in a notecard doesn’t actually select any text
-* fixed : re-enable drag-and-drop commit behaviour for main inventory panel, IM container floater, people sidebar panel and avatar picker floater
+* fixed : re-enable drag-and-drop commit behavior for main inventory panel, IM container floater, people sidebar panel and avatar picker floater
 * fixed : re-enable dragging and dropping between inventory tabs
 * fixed : the “PaymentSent” notification isn’t logged
 * fixed : don’t log persisted notifications multiple times
@@ -81,6 +87,7 @@ Cleaned up and tightened top status bar, especially useful if you prefer a minim
 * internal : changed unknown L$ balance from L$20,000,000 to L$-1 after Trinity claimed I owed her $78,000 US.
 
 ## RLVa & SharedWear
+
 Aside from some pretty major FUI related bug fixes to [[RLVa]], the big change here is [[SharedWear]] being on by default. [[SharedWear]] means that items placed inside a [[♯RLV Folder|#RLV Folder]] do not need to be placed in attachment point named folders.
 
 * changed : flipped “RLVaEnableSharedWear” on by default
