--- a/catznip/docs/release_notes/r12_2.md
+++ b/catznip/docs/release_notes/r12_2.md
@@ -2,11 +2,11 @@
 
 ![Catznip_R12_2](./r12_2/Catznip_R12_2.png)
 
-This is largely a maintenance and 'quality of life' release. I’m trying to do these more frequently (ideally every couple of months) and decouple them from the major releases with all of the new shiny in them. 
+This is largely a maintenance and 'quality of life' release. I’m trying to do these more frequently (ideally every couple of months) and decouple them from the major releases with all of the new shiny in them.
 
 Unlike a major release there will only be a short transition period during which the previous release is still useable. After 2 weeks or so (starting around July 19th) the new release will become mandatory for all users. If you experience any problems please alert us sooner rather than later (or make a feedback submission from the viewer!).
 
-Also, if you haven't been yet, Ȼᴏƒƒєα made an awesome Catznip TV for SLB  @ http://maps.secondlife.com/secondlife/SL16B%20Captivate/237/166/24 (I helped decorate it!) There's only a few days left to go and see it (July 8th) so hurry up!...
+Also, if you haven't been yet, Ȼᴏƒƒєα made an awesome Catznip TV for SLB  @ <http://maps.secondlife.com/secondlife/SL16B%20Captivate/237/166/24> (I helped decorate it!) There's only a few days left to go and see it (July 8th) so hurry up!...
 
 Finally, a big, big thank you to all the people who keep supporting us on Patreon! I've finally managed to track some (well, two) of you down in-world and you can see Kitten & Butta in this release's picture.  Hopefully we can include some more of you in the next couple of releases 😊.
 
@@ -15,26 +15,30 @@ Finally, a big, big thank you to all the people who keep supporting us on Patreo
 We’ve had some really good feedback about the new release notes format for the past 2 release so I’ll keep trying to highlight new (or changed) features with a little blurb attached 😊.
 
 ### Quick preferences
+
 The ‘Worn Items’ and ‘Quick Inventory’ panels on the ‘Quick Prefs’ floater were introduced in R12 and have been a big hit. R12.2 just adds some more improvements to them:
+
 * CATZ-475  - Add button to open wearing panel to the 'Worn Items' quickprefs panel
 Clicking the shirt icon on the ‘Worn Items’ quick prefs panel will open its larger brother.
 
 ![QuickPrefsWearing](./r12_2/QuickPrefsWearing.png)
- 
+
 * CATZ-476 - Add button to open the selected folder to the 'Quick Access' quickprefs panel
 Similarly, the new inventory icon on the ‘Quick Inventory’ panel will open your inventory with that folder selected and opened.
 
 ![QuickPrefsInventory](./r12_2/QuickPrefsInventory.png)
 
 ### Show in Inventory
+
 * CATZ-501 - Add 'Show in Inventory' to the worn attachment context menu
 An ‘OMG how did we not think of this ourselves?!’ request by a user adds a highly useful menu item to the right-click menu of any attachment:
- 
+
 Clicking the menu item will open your inventory with the attachment’s inventory item visible and selected.
 
 ![ShowInInventory](./r12_2/ShowInInventory.png)
 
 ### Clear inventory filter on close
+
 * CATZ-494 - Option to reset the inventory filter when closing the filter floater
 A user reported that it wasn’t obvious to them that closing the inventory filter floater wouldn’t reset / clean up the filter options on that floater so I added an option to do just that in case other people are similarly confused.
 With the option checked, closing the floater will have the same effect as clicking the ‘Reset Filters’  button.
@@ -42,12 +46,13 @@ With the option checked, closing the floater will have the same effect as clicki
 ![InvFilterResetOnClose](./r12_2/InvFilterResetOnClose.png)
 
 ### Hover name tag offset
- 
+
 Another user request of a simple feature: by default the sliders is all the way to the left. Dragging it to the right will increase the distance between the name tag and the avatar.
 
 ![NameTagHover](./r12_2/NameTagHover.png)
 
 ### ‘Collapse All Folders’ vs ‘Collapse To Folders’
+
 * CATZ-491 - Added "Collapse To Folders" option on the inventory gear menu to close all currently visible folders containing items
 The ‘collapse’ button has been there for a long time now on the inventory toolbar and resets your current inventory view to just showing only the top-level folders.
 However, sometimes you typed in a keyword (or otherwise filtered your inventory) and want to see the folders, but not the items.
@@ -55,10 +60,12 @@ However, sometimes you typed in a keyword (or otherwise filtered your inventory)
 ![InvCollapseFolders](./r12_2/InvCollapseFolders.png)
 
 ## Minor improvements
+
 * CATZ-464 - Add the Ctrl-Backspace key combination to delete the previous word
 * CATZ-489 - Change the object's group on the build floater to be a clickable link
 
 ## Bugfixes
+
 * CATZ-461 - Right-click inventory offer / Show Inventory Item yields an error
 * CATZ-462 - Clicking on the inventory item SLurl doesn't preview the item when 'ShowNewInventory' is FALSE
 * CATZ-472 - New inventory isn't shown when the tab has a "between 0 and X hours/days" filter active
@@ -81,6 +88,7 @@ However, sometimes you typed in a keyword (or otherwise filtered your inventory)
 * LLInitClass constructed UI elements don't have access to the spellchecker
 
 ## Crash fixes
+
 * CRASH-26 - Logout crash
 * CRASH-27 - Crash when an animesh horse goes out of draw distance (most often on Bellisseria)
 * CRASH-28 - Crash when cancelling out of the upload file picker
@@ -91,4 +99,5 @@ However, sometimes you typed in a keyword (or otherwise filtered your inventory)
 * CRASH-33 - Crash when opening the conversation history #2
 
 ## RLVa
+
 * CATZ-509: [RLVa] Add @getheightoffset to get the current offer height (with @adjustheight's scale)
