--- a/catznip/docs/release_notes/r12_4.md
+++ b/catznip/docs/release_notes/r12_4.md
@@ -4,6 +4,6 @@
 
 Little did we know just how prophetic that mock group notice would turn out to be!
 
-R12.4 was planned to have all the features of R13, just without EEP. However, as it turned out we managed to fix most of the performance issues along the way so it was never publically released.
+R12.4 was planned to have all the features of R13, just without EEP. However, as it turned out we managed to fix most of the performance issues along the way so it was never publicly released.
 
 If you have this release in your downloads folder, it's a rare Catznip collector's item!
